局部LESS文件修改

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="source/css/base.css">
     </head>
     <body>
-        <h1>栅格系统</h1>
+        <h1>默认栅格系统</h1>
         <div class="container" style="background-color:#fff;">
             <div class="row">
               <div class="span4">44444</div>
@@ -32,6 +32,17 @@
                 </div>
               </div>
               <div class="span6">6666</div>
+            </div>
+        </div>
+        <h1>流式栅格系统</h1>
+        <div class="container-fluid" style="background-color:#fff;">
+            <div class="row-fluid">
+              <div class="span4">44444</div>
+              <div class="span6">66666</div>
+              <div class="span5">55555</div>
+            </div>
+            <div class="row-fluid">
+                <div class="span15">15151</div>
             </div>
         </div>
         <h1>按钮</h1>
